--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <p>connect4: https://cat1ger.github.io/connect4/</p>
 </body>
 </html>
